fixed mobile overflow

--- a/assets/scss/_settings.scss
+++ b/assets/scss/_settings.scss
@@ -216,7 +216,7 @@
     }
 
     @include phones {
-        width: 85%;
+        width: 95%;
     }
 
     @include md-screen {
